<resources>
    <string name="app_name">JollyRead</string>
    <string name="email">" Email"</string>
    <string name="password">" Password"</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="name">" Name"</string>
    <string name="confirm_password">" Confirm Password"</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_log_in">Already have an account? LOG IN</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome">Welcome to JollyRead!</string>
    <string name="browse_books">Browse Books</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for books</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>