<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="always" />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/baseline_logout_24"
        app:showAsAction="always" />
    <item android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/baseline_info_24"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/feedback"
        android:title="@string/feedback"
        android:icon="@drawable/baseline_feedback_24"
        app:showAsAction="never" />
        />
    <item android:id="@+id/share"
        android:icon="@drawable/baseline_share_24"
        android:title="@string/share"
        app:showAsAction="never"/>

</menu>